# jml

./: .clang-format  .clang-tidy  .gitignore  .lua-format  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  conanfile.py  conanfile.txt  requirements.txt
.github/workflows/: build.yml  linux.yml  macos.yml  pre-commit.yml  windows.yml
example/: Components.lua  Launcher.lua  Plugin.lua  color.lua  components.lua  demo.lua  demo_Components.lua
example/jml/: equalizer.lua  jml.lua  main.lua
example/launcher/: content.lua  sidebar.lua  thumbnail.lua
examples/: demo.lua  launcher.lua
examples/jml/: equalizer.lua  jml.lua
module/: .clang-format  CMakeLists.txt
module/lua_juce/: lua_juce.cpp  lua_juce.hpp
module/lua_juce_audio_basics/: lua_juce_audio_basics.cpp  lua_juce_audio_basics.hpp
module/lua_juce_audio_basics/audio_play_head/: AudioPlayHead.cpp
module/lua_juce_audio_basics/midi/: MidiFile.cpp
module/lua_juce_core/: lua_juce_core.cpp  lua_juce_core.hpp
module/lua_juce_core/containers/: Array.cpp  Array.hpp
module/lua_juce_core/files/: File.cpp
module/lua_juce_core/maths/: BigInteger.cpp  Int.cpp  Int.hpp  MathConstants.cpp  MathConstants.hpp  NormalisableRange.cpp  Random.cpp  Range.cpp  Range.hpp  StatisticsAccumulator.cpp
module/lua_juce_core/memory/: MemoryBlock.cpp
module/lua_juce_core/misc/: Result.cpp  Uuid.cpp  Uuid.hpp
module/lua_juce_core/network/: IPAddress.cpp
module/lua_juce_core/streams/: InputStream.cpp  InputStream.hpp  MemoryInputStream.cpp  MemoryInputStream.hpp  MemoryOutputStream.cpp  OutputStream.cpp
module/lua_juce_core/text/: String.cpp  String.hpp  StringArray.cpp  StringArray.hpp  StringRef.cpp
module/lua_juce_core/time/: PerformanceCounter.cpp  RelativeTime.cpp  Time.cpp
module/lua_juce_core/xml/: XmlDocument.cpp  XmlElement.cpp
module/lua_juce_data_structures/: lua_juce_data_structures.hpp
module/lua_juce_data_structures/undomanager/: UndoManager.cpp  UndoableAction.cpp
module/lua_juce_data_structures/values/: ValueTree.cpp
module/lua_juce_events/timers/: Timer.cpp  Timer.hpp
module/lua_juce_graphics/: lua_juce_graphics.cpp  lua_juce_graphics.hpp
module/lua_juce_graphics/colour/: Colour.cpp  ColourGradient.cpp  Colours.cpp  PixelARGB.cpp
module/lua_juce_graphics/contexts/: Graphics.cpp  Graphics.hpp
module/lua_juce_graphics/font/: Font.cpp
module/lua_juce_graphics/geometry/: AffineTransform.cpp  Line.cpp  Path.cpp  Point.cpp  Rectangle.cpp
module/lua_juce_graphics/images/: Image.cpp  ImageCache.cpp
module/lua_juce_graphics/placement/: Justification.cpp
module/lua_juce_gui_basics/: lua_juce_gui_basics.cpp  lua_juce_gui_basics.hpp
module/lua_juce_gui_basics/buttons/: ArrowButton.cpp  Button.cpp  Button.hpp  HyperlinkButton.cpp  HyperlinkButton.hpp  ImageButton.cpp  ImageButton.hpp  ShapeButton.cpp  (+4 more)
module/lua_juce_gui_extra/: lua_juce_gui_extra.cpp  lua_juce_gui_extra.hpp
modules/: CMakeLists.txt
modules/lua_juce/: lua_juce.hpp
modules/lua_juce_audio_basics/: lua_juce_audio_basics.cpp
modules/lua_juce_audio_processors/: lua_juce_audio_processors.cpp  lua_juce_audio_processors.hpp
modules/lua_juce_core/: lua_juce_core.cpp  lua_juce_core.hpp
modules/lua_juce_data_structures/: lua_juce_data_structures.cpp  lua_juce_data_structures.hpp
modules/lua_juce_events/: lua_juce_events.hpp
modules/lua_juce_graphics/: lua_juce_graphics.hpp
modules/lua_juce_gui_basics/: lua_juce_gui_basics.hpp
modules/lua_juce_gui_extra/: lua_juce_gui_extra.cpp  lua_juce_gui_extra.hpp
modules/mc_lua_juce/: mc_lua_juce.cpp  mc_lua_juce.hpp
test/: CMakeLists.txt
test/core/: Array.lua
tests/: CMakeLists.txt
tests/graphics/: Colour.lua
tool/: CMakeLists.txt
tool/jml-cli/: CMakeLists.txt  JmlCommandline.cpp  JmlCommandline.hpp  Main.cpp
tool/jml-designer/: CMakeLists.txt
tool/jml-docgen/: Makefile  README.md  config.ld  doxygen.lua  json.lua  ldoc.lua  main.lua  markdown.lua  sol2.lua  strings.lua
tool/jml-documentation/: Documentation.md  Makefile  README.md  config.ld  doc.md  doxygen.lua  json.lua  main.lua  xml.lua
tool/jml-gui-tester/: CMakeLists.txt
tool/jml-viewer/: CMakeLists.txt
tool/jml-viewer/Application/: CommandIDs.hpp  CommandLine.cpp  CommandLine.hpp  Main.cpp  MainComponent.cpp  MainComponent.hpp  MenuBar.cpp  MenuBar.hpp
tool/jml-viewer/CodeEditor/: CodeEditor.cpp  CodeEditor.hpp
tool/jml-viewer/Command/: Snapshot.hpp  Test.hpp
tool/jml-viewer/Core/: Graphics.cpp  Graphics.hpp
tool/jml-viewer/LookAndFeel/: Colours.hpp  JmlViewerColors.hpp  JmlViewerLookAndFeel.cpp  JmlViewerLookAndFeel.hpp  LookAndFeel.cpp  LookAndFeel.hpp
tool/jml-viewer/Viewer/: ComponentContainer.cpp  ComponentContainer.hpp  ComponentTree.cpp  ComponentTree.hpp  FileChangeListener.cpp  LuaScriptViewer.cpp  LuaScriptViewer.hpp  ScriptPanel.cpp  ScriptPanel.hpp  ScriptViewport.cpp  ScriptViewport.hpp
tool/jml_tools/: jml_tools.hpp
tools/: CMakeLists.txt
tools/jml-designer/: CMakeLists.txt
tools/jml-designer/Application/: Application.hpp  MainComponent.cpp
tools/jml-designer/Component/: ColorPropertyComponent.cpp  ColorPropertyComponent.hpp  PropertyPanel.hpp  ValuePropertyComponent.hpp
tools/jml-designer/Core/: Justification.cpp  Justification.hpp  ValueTreeObjectList.hpp
tools/jml-designer/Document/: Document.cpp  Document.hpp  DocumentEditor.cpp
tools/jml-designer/Layer/: Layer.cpp  LayerCanvas.hpp  LayerList.cpp  LayerListener.cpp  LayerListener.hpp  LayerPropertyPanel.cpp  LayerPropertyPanel.hpp  LayerSelection.hpp  LayerTree.cpp  LayerTree.hpp  LayerTreeItem.cpp
tools/jml-designer/Layer/Effect/: DropShadow.hpp  LayerEffect.cpp  StackBlurEffect.cpp  StackBlurEffect.hpp
tools/jml-designer/Layer/Export/: ExportPanel.cpp  ExportPanel.hpp  ImageExporter.cpp
tools/jml-designer/Layers/: TextLayer.cpp
tools/jml-designer/Menu/: CommandIDs.hpp  MenuBar.cpp  MenuBar.hpp
tools/jml-designer/Tool/: SelectionTool.hpp  ShapeTool.cpp  ShapeTool.hpp  Tool.hpp  ToolBar.hpp
tools/jml-viewer/: CMakeLists.txt
tools/jml_tools/: jml_tools.cpp  jml_tools.hpp
(+298 files in other folders)
